Use virtual threads in Java backend
Tested by creating 100000 simultaneous ABS tasks: runs in 10s on this
version, crashes when using normal Java threads.

- Use one virtual thread for each ABS task

- Simplify thread creation: create thread immediately when adding a
  task instead of having threads create new threads when suspending